# FANNG-MPC-Converter

./: .gitignore  License.txt  README.md
MPCTo2PCConverter/: README.md  depdendencies
MPCTo2PCConverter/db_scripts/: README.md  conf.py  create_db_mysql.py  create_db_postgres.py  db_creation.sh  db_test.sh  drop_db_all.py  mysql_test.py  postgresql_test.py  queries.py  super_dealer_test.py  utils.py
MPCTo2PCConverter/db_scripts/schema_files/: client_db_schema_mysql.sql  client_db_schema_postgresql.sql  dealer_db_schema_mysql.sql  dealer_db_schema_postgresql.sql  delete_tables_mysql.sql  delete_tables_postgresql.sql  model_owner_db_schema_mysql.sql  model_owner_db_schema_postgresql.sql  mpclib-share-schema.sql  super_dealer_db_schema_mysql.sql  super_dealer_db_schema_postgresql.sql
MPCTo2PCConverter/proj/: CMakeLists.txt  README.md  build.sh
MPCTo2PCConverter/proj/doc/: BPM_Converter.drawio  Converter_Flow.drawio  Database_Model.drawio
MPCTo2PCConverter/proj/doc/snippets/: aes_rng.cpp
MPCTo2PCConverter/proj/protos/: shares.proto
MPCTo2PCConverter/proj/scripts/: README.md  client_test.py  conf.py  create_dealer_dbs.py  create_keys.py  end2end.sh  end2end_test.py  fill_db.py  generate_materials.py  mo_dealer_test.py  queries.py  sd_test.py  server.py  share_converter_mpclib.py  swagger_params.py  utils.py
MPCTo2PCConverter/proj/src/: AES_RNG.h  client.cpp  client.h  config_loader.cpp  config_loader.h  crypt_util.cpp  crypt_util.h  db_schemas.cpp  db_schemas.h  dealer.cpp  dealer.h  enums.h  model_owner.cpp  model_owner.h  mysql.cpp  mysql.h  postgresql.cpp  postgresql.h  rest_client.cpp  rest_client.h  rest_server.cpp  rest_server.h  super_dealer.cpp  super_dealer.h  tii_prime.cpp  tii_prime.h
MPCTo2PCConverter/proj/test/: grpc.cpp  mysql_test.cpp  postgresql_test.cpp  prg.cpp  rest.cpp  tiiprime.cpp
MPCTo2PCConverter/unittest/0p_test/: config.yaml
MPCTo2PCConverter/unittest/3p_test/: config.yaml  config_taas.yaml
MPCTo2PCConverter/unittest/5p_test/: config.yaml
docker-files/: development-environment.dockerfile  docker-compose-taas-converter.yaml  docker-compose.yaml
